# Hafunge

./: .gitignore  Hafunge.cabal  README.md
src/: Code.hs  Input.hs  Interpreter.hs  Main.hs  Output.hs  Parser.hs  Stack.hs  Types.hs
