name:                 Hafunge
version:              0.0.1
synopsis:             
-- description:
-- license:
-- license-file:
homepage:             
author:               jnmeyr
maintainer:           jnmeyr@users.noreply.github.com
category:             
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable Hafunge
  main-is:            Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:      base >= 4.7 && < 5, containers, random
  hs-source-dirs:     src
  default-language:   Haskell2010
